# alcademic

alcademic-frontend/: index.html  package-lock.json  package.json
alcademic-frontend/src/: routeTree.gen.ts
alcademic-frontend/src/lib/: api.ts
alcademic-frontend/src/routes/: __root.tsx  index.tsx  paper.$id.tsx
alcademic-frontend/src/types/: index.ts
alcademic-scripts/: .gitignore  pyproject.toml
alcademic-scripts/src/alcademic_scripts/: create_meta_batch_tasks.py  download_pdfs.py  generate_meta_batch_files.py
