[project]
name = "alcademic-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "JosephJoshua",email = "jj.anggita@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "alcademic_scripts", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
